refactor: 코드 정리 및 Java 21 문법 적용
- 사용하지 않는 메서드 및 클래스 제거
- Switch expression으로 현대적 문법 적용
- Stream API 최적화 (toList() 사용)
- Lombok 어노테이션 활용으로 보일러플레이트 코드 제거
- 불필요한 null 체크 및 import 정리